--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
   width: 100%;
   height: 100vh;
 
-  background-color: #e4ece9;
+  background-color: #393f3d;
 
   display: flex;
   flex-direction: column;
